Allow multiple labels on the same element and convert the elements section to a map.